Added 00 - intro to privacy and some imgs

--- a/01.rooting-op6/01.rooting-op6.md
+++ b/01.rooting-op6/01.rooting-op6.md
@@ -16,7 +16,7 @@ In Linux, the _user account_ with most powerful rights - which can control the e
 
 So, when we say we are _rooting_ our Android device, what we actually mean is that we are granting ourselves the access to _root_ account so that we are able to alter the entire Android system as and how we desire.
 
-# Advantages and Disadvantages of rooting.
+# Advantages and Disadvantages of Rooting.
 
 Now, having complete access to modify the Android system has both pros and cons. Let's discuss them a bit.
 
@@ -50,7 +50,7 @@ We also need some programs. Download the following programs.
 * [Twrp](https://twrp.me/oneplus/oneplus6.html) - Choose the mirror, and download both - the img, and the zip file (latest version). The img is required to bootstrap in the twrp menu, while the zip will be used to permanently install twrp. Twrp is a replacement recovery from the stock OnePlus recovery which unlocks a myriad of features, more than the stock recovery. It also allows the use of ADB while in recovery which can be rather useful.
 * [Magisk Installer](https://github.com/topjohnwu/Magisk/releases) - Download the latest release zip from the link. You should also download the uninstaller in case you want to unroot the device. This contains the root program, as well as, the application which you can use to manage it.
 
-# Rooting the device
+# Rooting the Device
 
 It's time people! The moment you have all been waiting for! The period of awakening! The hour of paramount importance! It's time to root your device!
 
