--- a/00.what-is-privacy/00.what-is-privacy.md
+++ b/00.what-is-privacy/00.what-is-privacy.md
@@ -32,7 +32,7 @@ People need protection from that, and that itself is the purpose of security. In
 
 In a nutshell, the privacy is all but nonexistent, with people not being aware enough about it, and most companies and governments basically laughing on it. Take a look at Facebook, Google, or any other **big company** (most of them), they relentlessly break the last shard of privacy of anyone who uses their services. And it's not like they are breaking laws. They clearly mention in their privacy policy and terms & conditions that they are basically going to burn people's privacy to hell by tracking the life out of them. It's just that this privacy information is cleverly hidden away in their ludicrously long documents which we always ignore very diligently.
 
-![Privacy LoL](/static/img/privacy-lol.jpg)
+![Privacy LoL](/static/imgs/privacy-lol.jpg)
 
 These companies collect all the data they can from the users - us - and generate a profile of us. You would be surprized to find how eerily accurate these profiles can be. They, then, sell this information about the users to other companies who pay a lot of money for this information. Most of these companies give targeted advertisements based on the information gathered about the person, and hence, the person in question sees a lot of advertisements throughout the Internet which have a mighty better change at appealing to her/him.
 
@@ -46,7 +46,7 @@ When most people are asked about privacy and what they are doing about it, the m
 
 Well, that is actually the first thought of anyone. It's just, when one realizes what can actually be done with the data being collected, they get a jolt of what is really going on and why is it so bad. Imagine, you're talking with someone about something personal, only to realize that the _veil_ of privacy, of secrecy, is nothing but a big, fat, virtuality. That you are being constantly monitored about what you do and are basically kept under mass surveillance at all times.
 
-![Argue Privacy Invalid](/static/img/argue-privacy-invalid.png)
+![Argue Privacy Invalid](/static/imgs/argue-privacy-invalid.png)
 
 It is true that one might not have any problems with that, and it might not even effect them. But that doesn't mean it is not a direct breach of one's privacy - which every human being has a fundamental right to. And that, is the sad thing.
 
