--- a/00.what-is-privacy/00.what-is-privacy.md
+++ b/00.what-is-privacy/00.what-is-privacy.md
@@ -13,7 +13,7 @@ Therefore, to maintain the balance between regulations and freedom, in comes **P
 
 # Privacy
 
-Every person has secrets. For better, or for worse, each and everyone, has some secret or the other. One thing that must be kept in mind is that secrey does not inherently have a negative connotation, nor does it imply dark intent.
+Every person has secrets. For better, or for worse, each and everyone, has some secret or the other. One thing that must be kept in mind is that secrecy does not inherently have a negative connotation, nor does it imply dark intent.
 
 For example, parents keep secrets from their children - most prominent being - how hard it is for them to raise the children mentally, physically, and financially. Yet, they do not let their children's smiles wear off.
 
