Added center alignment to images

--- a/02.ad-blocking/02.ad-blocking.md
+++ b/02.ad-blocking/02.ad-blocking.md
@@ -91,7 +91,12 @@ There are more options like extensions in browser, but those extensions are not 
 ### Installing AdAway
 
 * As we have installed the FDroid application, we can now install the adblocker which will modify the **hosts** file for us instead of us having to do so manually (like in computer).
-* Open the FDroid application, and search for **Adaway**. The image of application should be as follows: ![AdAway Image](https://f-droid.org/repo/icons-640/org.adaway.61.png)
+* Open the FDroid application, and search for **Adaway**. The image of application should be as follows:
+
+<center>
+![AdAway Image](https://f-droid.org/repo/icons-640/org.adaway.61.png)
+</center>
+
 * Install the application and open it. The first time you open it, it will ask for **Superuser** permission (you **MUST** be rooted). Grant it the permission and click on **Download files and apply ad blocking**.
 * It will download some files and install them, and ask you to reboot the system, so reboot it.
 * **Congratulations**! You have successfully installed AdAway and have blocked quite a large chunk of advertisements and trackers from your ENTIRE device!
